quiche_bindings.dart


int quiche_version_is_supported(
  int version,
) {
_quiche_version_is_supported ??= _dylib.lookupFunction<_c_quiche_version_is_supported,_dart_quiche_version_is_supported>('quiche_version_is_supported');
  return _quiche_version_is_supported(
    version,
  );
}
_dart_quiche_version_is_supported _quiche_version_is_supported;

ffi.Pointer<Connection> quiche_conn_new_with_tls(
  ffi.Pointer<ffi.Uint8> scid,
  int scid_len,
  ffi.Pointer<ffi.Uint8> odcid,
  int odcid_len,
  ffi.Pointer<Config> config,
  ffi.Pointer<ffi.Void> ssl,
  int is_server,
) {
_quiche_conn_new_with_tls ??= _dylib.lookupFunction<_c_quiche_conn_new_with_tls,_dart_quiche_conn_new_with_tls>('quiche_conn_new_with_tls');
  return _quiche_conn_new_with_tls(
    scid,
    scid_len,
    odcid,
    odcid_len,
    config,
    ssl,
    is_server,
  );
}
_dart_quiche_conn_new_with_tls _quiche_conn_new_with_tls;

void quiche_conn_set_qlog_fd(
  ffi.Pointer<Connection> conn,
  int fd,
  ffi.Pointer<ffi.Int8> log_title,
  ffi.Pointer<ffi.Int8> log_desc,
) {
_quiche_conn_set_qlog_fd ??= _dylib.lookupFunction<_c_quiche_conn_set_qlog_fd,_dart_quiche_conn_set_qlog_fd>('quiche_conn_set_qlog_fd');
  return _quiche_conn_set_qlog_fd(
    conn,
    fd,
    log_title,
    log_desc,
  );
}
_dart_quiche_conn_set_qlog_fd _quiche_conn_set_qlog_fd;

int quiche_conn_recv(
  ffi.Pointer<Connection> conn,
  ffi.Pointer<ffi.Uint8> buf,
  int buf_len,
) {
_quiche_conn_recv ??= _dylib.lookupFunction<_c_quiche_conn_recv,_dart_quiche_conn_recv>('quiche_conn_recv');
  return _quiche_conn_recv(
    conn,
    buf,
    buf_len,
  );
}
_dart_quiche_conn_recv _quiche_conn_recv;

int quiche_conn_send(
  ffi.Pointer<Connection> conn,
  ffi.Pointer<ffi.Uint8> out,
  int out_len,
) {
_quiche_conn_send ??= _dylib.lookupFunction<_c_quiche_conn_send,_dart_quiche_conn_send>('quiche_conn_send');
  return _quiche_conn_send(
    conn,
    out,
    out_len,
  );
}
_dart_quiche_conn_send _quiche_conn_send;

int quiche_conn_stream_recv(
  ffi.Pointer<Connection> conn,
  int stream_id,
  ffi.Pointer<ffi.Uint8> out,
  int buf_len,
  ffi.Pointer<ffi.Int32> fin,
) {
_quiche_conn_stream_recv ??= _dylib.lookupFunction<_c_quiche_conn_stream_recv,_dart_quiche_conn_stream_recv>('quiche_conn_stream_recv');
  return _quiche_conn_stream_recv(
    conn,
    stream_id,
    out,
    buf_len,
    fin,
  );
}
_dart_quiche_conn_stream_recv _quiche_conn_stream_recv;

int quiche_conn_stream_send(
  ffi.Pointer<Connection> conn,
  int stream_id,
  ffi.Pointer<ffi.Uint8> buf,
  int buf_len,
  int fin,
) {
_quiche_conn_stream_send ??= _dylib.lookupFunction<_c_quiche_conn_stream_send,_dart_quiche_conn_stream_send>('quiche_conn_stream_send');
  return _quiche_conn_stream_send(
    conn,
    stream_id,
    buf,
    buf_len,
    fin,
  );
}
_dart_quiche_conn_stream_send _quiche_conn_stream_send;

int quiche_conn_stream_shutdown(
  ffi.Pointer<Connection> conn,
  int stream_id,
  int direction,
  int err,
) {
_quiche_conn_stream_shutdown ??= _dylib.lookupFunction<_c_quiche_conn_stream_shutdown,_dart_quiche_conn_stream_shutdown>('quiche_conn_stream_shutdown');
  return _quiche_conn_stream_shutdown(
    conn,
    stream_id,
    direction,
    err,
  );
}
_dart_quiche_conn_stream_shutdown _quiche_conn_stream_shutdown;

int quiche_conn_stream_capacity(
  ffi.Pointer<Connection> conn,
  int stream_id,
) {
_quiche_conn_stream_capacity ??= _dylib.lookupFunction<_c_quiche_conn_stream_capacity,_dart_quiche_conn_stream_capacity>('quiche_conn_stream_capacity');
  return _quiche_conn_stream_capacity(
    conn,
    stream_id,
  );
}
_dart_quiche_conn_stream_capacity _quiche_conn_stream_capacity;

int quiche_conn_stream_finished(
  ffi.Pointer<Connection> conn,
  int stream_id,
) {
_quiche_conn_stream_finished ??= _dylib.lookupFunction<_c_quiche_conn_stream_finished,_dart_quiche_conn_stream_finished>('quiche_conn_stream_finished');
  return _quiche_conn_stream_finished(
    conn,
    stream_id,
  );
}
_dart_quiche_conn_stream_finished _quiche_conn_stream_finished;

ffi.Pointer<StreamIter> quiche_conn_readable(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_readable ??= _dylib.lookupFunction<_c_quiche_conn_readable,_dart_quiche_conn_readable>('quiche_conn_readable');
  return _quiche_conn_readable(
    conn,
  );
}
_dart_quiche_conn_readable _quiche_conn_readable;

ffi.Pointer<StreamIter> quiche_conn_writable(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_writable ??= _dylib.lookupFunction<_c_quiche_conn_writable,_dart_quiche_conn_writable>('quiche_conn_writable');
  return _quiche_conn_writable(
    conn,
  );
}
_dart_quiche_conn_writable _quiche_conn_writable;

int quiche_conn_timeout_as_nanos(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_timeout_as_nanos ??= _dylib.lookupFunction<_c_quiche_conn_timeout_as_nanos,_dart_quiche_conn_timeout_as_nanos>('quiche_conn_timeout_as_nanos');
  return _quiche_conn_timeout_as_nanos(
    conn,
  );
}
_dart_quiche_conn_timeout_as_nanos _quiche_conn_timeout_as_nanos;

int quiche_conn_timeout_as_millis(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_timeout_as_millis ??= _dylib.lookupFunction<_c_quiche_conn_timeout_as_millis,_dart_quiche_conn_timeout_as_millis>('quiche_conn_timeout_as_millis');
  return _quiche_conn_timeout_as_millis(
    conn,
  );
}
_dart_quiche_conn_timeout_as_millis _quiche_conn_timeout_as_millis;

void quiche_conn_on_timeout(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_on_timeout ??= _dylib.lookupFunction<_c_quiche_conn_on_timeout,_dart_quiche_conn_on_timeout>('quiche_conn_on_timeout');
  return _quiche_conn_on_timeout(
    conn,
  );
}
_dart_quiche_conn_on_timeout _quiche_conn_on_timeout;

int quiche_conn_close(
  ffi.Pointer<Connection> conn,
  int app,
  int err,
  ffi.Pointer<ffi.Uint8> reason,
  int reason_len,
) {
_quiche_conn_close ??= _dylib.lookupFunction<_c_quiche_conn_close,_dart_quiche_conn_close>('quiche_conn_close');
  return _quiche_conn_close(
    conn,
    app,
    err,
    reason,
    reason_len,
  );
}
_dart_quiche_conn_close _quiche_conn_close;

void quiche_conn_application_proto(
  ffi.Pointer<Connection> conn,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  ffi.Pointer<ffi.Int32> out_len,
) {
_quiche_conn_application_proto ??= _dylib.lookupFunction<_c_quiche_conn_application_proto,_dart_quiche_conn_application_proto>('quiche_conn_application_proto');
  return _quiche_conn_application_proto(
    conn,
    out,
    out_len,
  );
}
_dart_quiche_conn_application_proto _quiche_conn_application_proto;

int quiche_conn_is_established(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_is_established ??= _dylib.lookupFunction<_c_quiche_conn_is_established,_dart_quiche_conn_is_established>('quiche_conn_is_established');
  return _quiche_conn_is_established(
    conn,
  );
}
_dart_quiche_conn_is_established _quiche_conn_is_established;

int quiche_conn_is_in_early_data(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_is_in_early_data ??= _dylib.lookupFunction<_c_quiche_conn_is_in_early_data,_dart_quiche_conn_is_in_early_data>('quiche_conn_is_in_early_data');
  return _quiche_conn_is_in_early_data(
    conn,
  );
}
_dart_quiche_conn_is_in_early_data _quiche_conn_is_in_early_data;

int quiche_conn_is_closed(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_is_closed ??= _dylib.lookupFunction<_c_quiche_conn_is_closed,_dart_quiche_conn_is_closed>('quiche_conn_is_closed');
  return _quiche_conn_is_closed(
    conn,
  );
}
_dart_quiche_conn_is_closed _quiche_conn_is_closed;

int quiche_conn_stream_init_application_data(
  ffi.Pointer<Connection> conn,
  int stream_id,
  ffi.Pointer<ffi.Void> data,
) {
_quiche_conn_stream_init_application_data ??= _dylib.lookupFunction<_c_quiche_conn_stream_init_application_data,_dart_quiche_conn_stream_init_application_data>('quiche_conn_stream_init_application_data');
  return _quiche_conn_stream_init_application_data(
    conn,
    stream_id,
    data,
  );
}
_dart_quiche_conn_stream_init_application_data _quiche_conn_stream_init_application_data;

ffi.Pointer<ffi.Void> quiche_conn_stream_application_data(
  ffi.Pointer<Connection> conn,
  int stream_id,
) {
_quiche_conn_stream_application_data ??= _dylib.lookupFunction<_c_quiche_conn_stream_application_data,_dart_quiche_conn_stream_application_data>('quiche_conn_stream_application_data');
  return _quiche_conn_stream_application_data(
    conn,
    stream_id,
  );
}
_dart_quiche_conn_stream_application_data _quiche_conn_stream_application_data;

int quiche_stream_iter_next(
  ffi.Pointer<StreamIter> iter,
  ffi.Pointer<ffi.Uint64> stream_id,
) {
_quiche_stream_iter_next ??= _dylib.lookupFunction<_c_quiche_stream_iter_next,_dart_quiche_stream_iter_next>('quiche_stream_iter_next');
  return _quiche_stream_iter_next(
    iter,
    stream_id,
  );
}
_dart_quiche_stream_iter_next _quiche_stream_iter_next;

void quiche_stream_iter_free(
  ffi.Pointer<StreamIter> iter,
) {
_quiche_stream_iter_free ??= _dylib.lookupFunction<_c_quiche_stream_iter_free,_dart_quiche_stream_iter_free>('quiche_stream_iter_free');
  return _quiche_stream_iter_free(
    iter,
  );
}
_dart_quiche_stream_iter_free _quiche_stream_iter_free;

void quiche_conn_stats(
  ffi.Pointer<Connection> conn,
  ffi.Pointer<struct (anonymous at quiche.h:308:9)> out,
) {
_quiche_conn_stats ??= _dylib.lookupFunction<_c_quiche_conn_stats,_dart_quiche_conn_stats>('quiche_conn_stats');
  return _quiche_conn_stats(
    conn,
    out,
  );
}
_dart_quiche_conn_stats _quiche_conn_stats;

void quiche_conn_free(
  ffi.Pointer<Connection> conn,
) {
_quiche_conn_free ??= _dylib.lookupFunction<_c_quiche_conn_free,_dart_quiche_conn_free>('quiche_conn_free');
  return _quiche_conn_free(
    conn,
  );
}
_dart_quiche_conn_free _quiche_conn_free;

ffi.Pointer<Http3Config> quiche_h3_config_new(
) {
_quiche_h3_config_new ??= _dylib.lookupFunction<_c_quiche_h3_config_new,_dart_quiche_h3_config_new>('quiche_h3_config_new');
  return _quiche_h3_config_new(
  );
}
_dart_quiche_h3_config_new _quiche_h3_config_new;

void quiche_h3_config_set_max_header_list_size(
  ffi.Pointer<Http3Config> config,
  int v,
) {
_quiche_h3_config_set_max_header_list_size ??= _dylib.lookupFunction<_c_quiche_h3_config_set_max_header_list_size,_dart_quiche_h3_config_set_max_header_list_size>('quiche_h3_config_set_max_header_list_size');
  return _quiche_h3_config_set_max_header_list_size(
    config,
    v,
  );
}
_dart_quiche_h3_config_set_max_header_list_size _quiche_h3_config_set_max_header_list_size;

void quiche_h3_config_set_qpack_max_table_capacity(
  ffi.Pointer<Http3Config> config,
  int v,
) {
_quiche_h3_config_set_qpack_max_table_capacity ??= _dylib.lookupFunction<_c_quiche_h3_config_set_qpack_max_table_capacity,_dart_quiche_h3_config_set_qpack_max_table_capacity>('quiche_h3_config_set_qpack_max_table_capacity');
  return _quiche_h3_config_set_qpack_max_table_capacity(
    config,
    v,
  );
}
_dart_quiche_h3_config_set_qpack_max_table_capacity _quiche_h3_config_set_qpack_max_table_capacity;

void quiche_h3_config_set_qpack_blocked_streams(
  ffi.Pointer<Http3Config> config,
  int v,
) {
_quiche_h3_config_set_qpack_blocked_streams ??= _dylib.lookupFunction<_c_quiche_h3_config_set_qpack_blocked_streams,_dart_quiche_h3_config_set_qpack_blocked_streams>('quiche_h3_config_set_qpack_blocked_streams');
  return _quiche_h3_config_set_qpack_blocked_streams(
    config,
    v,
  );
}
_dart_quiche_h3_config_set_qpack_blocked_streams _quiche_h3_config_set_qpack_blocked_streams;

void quiche_h3_config_free(
  ffi.Pointer<Http3Config> config,
) {
_quiche_h3_config_free ??= _dylib.lookupFunction<_c_quiche_h3_config_free,_dart_quiche_h3_config_free>('quiche_h3_config_free');
  return _quiche_h3_config_free(
    config,
  );
}
_dart_quiche_h3_config_free _quiche_h3_config_free;
